--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -129,7 +129,7 @@ Our results are summarized in @tbl-modelresults.
 library(rstanarm)
 
 first_model <-
-  readRDS(file = here::here("models/first_model.rds"))
+  readRDS(file = here::here("models/first_model2022.rds"))
 
 
 
@@ -206,7 +206,7 @@ In @fig-ppcheckandposteriorvsprior-2 we compare the posterior with the prior. Th
 #| fig-cap: "Examining how the model fits, and is affected by, the data"
 #| fig-subcap: ["Posterior prediction check", "Comparing the posterior with the prior"]
 
-analysis_data <- arrow::read_parquet(here::here("data/analysis_data/ces2020.parquet"))
+analysis_data <- arrow::read_parquet(here::here("data/analysis_data/ces2022clean.parquet"))
 
 set.seed(853)
 
