--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -95,9 +95,24 @@ first_model <-
   readRDS(file = here::here("models/first_model2022.rds"))
 
 
-
-
 ```
+
+```{r}
+#| echo: false
+#| eval: true
+#| label: tbl-modelresults
+#| tbl-cap: "Explanatory models of flight time based on wing width and wing length"
+#| warning: false
+
+modelsummary::modelsummary(
+  list(
+    "First model" = first_model
+  ),
+  statistic = "mad",
+  fmt = 2
+)
+```
+
 
 
 
