--- a/paper/references.bib
+++ b/paper/references.bib
@@ -22,53 +22,36 @@
   }  
   
   
-@Manual{citeLahman,
-    title = {Lahman: Sean `Lahman' Baseball Database},
-    author = {Michael Friendly and Chris Dalzell and Martin Monkman and Dennis Murphy},
-    year = {2020},
-    note = {R package version 8.0-0},
-    url = {https://CRAN.R-project.org/package=Lahman},
-  }  
-  
-  
-@article{gebru2021datasheets,
-  title={Datasheets for datasets},
-  author={Gebru, Timnit and Morgenstern, Jamie and Vecchione, Briana and Vaughan, Jennifer Wortman and Wallach, Hanna and Iii, Hal Daum{\'e} and Crawford, Kate},
-  journal={Communications of the ACM},
-  volume={64},
-  number={12},
-  pages={86--92},
-  year={2021},
-  publisher={ACM New York, NY, USA}
-}
 
 @Misc{rstanarm,
     title = {rstanarm: {Bayesian} applied regression modeling via {Stan}},
     author = {Ben Goodrich and Jonah Gabry and Imad Ali and Sam Brilleman},
-    note = {R package version 2.21.3},
+    note = {R package version 8.0-0},
     year = {2022},
     url = {https://mc-stan.org/rstanarm/},
   }
   
-@Manual{palmerpenguins,
-    title = {palmerpenguins: Palmer Archipelago (Antarctica) penguin data},
-    author = {Allison Marie Horst and Alison Presmanes Hill and Kristen B Gorman},
-    year = {2020},
-    note = {R package version 0.1.0},
-    doi = {10.5281/zenodo.3960218},
-    url = {https://allisonhorst.github.io/palmerpenguins/},
+
+
+@Misc{article1,
+    title = {Gender Gap: Voting Choices in Presidential Elections}},
+    author = {Centre for American Women and Politics},
+    year = {2024},
+    url = {https://cawp.rutgers.edu/gender-gap-voting-choices-presidential-elections},
   }
   
+@Misc{article2,
+    title = {Women Tend to Vote for Democratic Presidential Candidates More Than Men Do. Here’s How That Gender Gap First Came to Be}},
+    author = {Suzanne Kahn},
+    year = {2020},
+    url = {https://time.com/5903399/gender-gap-politics},
+  }
   
-@Article{rohan,
-    title = {Welcome to the {tidyverse}},
-    author = {Hadley Wickham and Mara Averick and Jennifer Bryan and Winston Chang and Lucy D'Agostino McGowan and Romain François and Garrett Grolemund and Alex Hayes and Lionel Henry and Jim Hester and Max Kuhn and Thomas Lin Pedersen and Evan Miller and Stephan Milton Bache and Kirill Müller and Jeroen Ooms and David Robinson and Dana Paige Seidel and Vitalie Spinu and Kohske Takahashi and Davis Vaughan and Claus Wilke and Kara Woo and Hiroaki Yutani},
-    year = {2019},
-    journal = {Journal of Open Source Software},
-    volume = {4},
-    number = {43},
-    pages = {1686},
-    doi = {10.21105/joss.01686},
-  }  
+@Misc{article3,
+    title = {How Educational Differences Are Widening America’s Political Rift}},
+    author = {Nate Cohn},
+    year = {2021},
+    url = {https://www.nytimes.com/2021/09/08/us/politics/how-college-graduates-vote.html},
+  }
   
   
