--- a/paper/references.bib
+++ b/paper/references.bib
@@ -34,21 +34,21 @@
 
 
 @Misc{article1,
-    title = {Gender Gap: Voting Choices in Presidential Elections}},
+    title = {Gender Gap: Voting Choices in Presidential Elections},
     author = {Centre for American Women and Politics},
     year = {2024},
     url = {https://cawp.rutgers.edu/gender-gap-voting-choices-presidential-elections},
   }
   
 @Misc{article2,
-    title = {Women Tend to Vote for Democratic Presidential Candidates More Than Men Do. Here’s How That Gender Gap First Came to Be}},
+    title = {Women Tend to Vote for Democratic Presidential Candidates More Than Men Do. Here’s How That Gender Gap First Came to Be},
     author = {Suzanne Kahn},
     year = {2020},
     url = {https://time.com/5903399/gender-gap-politics},
   }
   
 @Misc{article3,
-    title = {How Educational Differences Are Widening America’s Political Rift}},
+    title = {How Educational Differences Are Widening America’s Political Rift},
     author = {Nate Cohn},
     year = {2021},
     url = {https://www.nytimes.com/2021/09/08/us/politics/how-college-graduates-vote.html},
