--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -10,6 +10,7 @@ abstract: "There are many factors that can influence someone's voting preference
 format: pdf
 number-sections: true
 bibliography: references.bib
+toc: TRUE
 ---
 
 ```{r}
@@ -52,38 +53,9 @@ The remainder of this paper is structured as follows. @sec-data discusses the da
 
 ## Data Source
 
-The data used in this paper is contained in the Cooperative Election Study 2022.(CITE) This study examines American's views on representatives, electoral experiences and elections. This data is available for free at the Harvard University Dataverse.
+The data used in this paper is contained in the Cooperative Election Study 2022.@dataset This study examines American's views on representatives, electoral experiences and elections. This data is available for free at the Harvard University Dataverse.
 
-Surverys were used to collect data from a sample large enough that it may be assumed is representative of the entire American population. Importantly, this covered a wide range of constituencies and the sample was large enough such that the data for each constituency is enough to assume that it is representative of its whole.(CITE CES REPORT) There were 60 research teams, and each purchased 1000 surverys to hand out to their respective constituencies. Sample matching was used to pick the 1000 people in which the surverys were to be administered. This is a process which is not truly random but has the benefit of being practical. In a truly randomly selected group, the contact information for some may not be readily available and therefore makes the data collectin process much more difficult. Sample matching involves selecting a sample at random, and anyone who does not fit the criteria to proceed(in this case having your contact information available) is then replaced by a person in the pool who is believed to have similar characteristics. 
-
-## Data Analysis
-
-The data is summarized in @fig-dataexplore.
-
-```{r}
-#| echo: false
-#| eval: true
-#| label: fig-dataexplore
-#| tbl-cap: "The distribution of presidential preferences, by gender, and highest education"
-#| warning: false
-setwd("/Users/rahulgopeesingh/Documents/election")
-ces2022 <- read_csv("election/data/raw_data/ces2022.csv")
-ces2022graph <-
-  ggplot(ces2022, aes(x = education, fill = voted_for)) +
-  stat_count(position = "dodge") +
-  facet_wrap(facets = vars(gender)) +
-  theme_minimal() +
-  labs(
-    x = "Highest education",
-    y = "Number of respondents",
-    fill = "Voted for"
-  ) +
-  coord_flip() +
-  scale_fill_brewer(palette = "Set1") +
-  theme(legend.position = "bottom")
-
-
-```
+Surverys were used to collect data from a sample large enough that it may be assumed is representative of the entire American population. Importantly, this covered a wide range of constituencies and the sample was large enough such that the data for each constituency is enough to assume that it is representative of its whole.@dataset There were 60 research teams, and each purchased 1000 surverys to hand out to their respective constituencies. Sample matching was used to pick the 1000 people in which the surverys were to be administered. This is a process which is not truly random but has the benefit of being practical. In a truly randomly selected group, the contact information for some may not be readily available and therefore makes the data collectin process much more difficult. Sample matching involves selecting a sample at random, and anyone who does not fit the criteria to proceed(in this case having your contact information available) is then replaced by a person in the pool who is believed to have similar characteristics. 
 
 
 # Model {#sec-mod}
@@ -157,21 +129,21 @@ modelsummary::modelsummary(
 
 \newpage
 
-# Discussion {#data-dis}
+# Discussion {#sec-dis}
 
 ## Female Prefereces
 
-We observe that females are 0.8 times as likely to vote for Trump as they are for Biden. This follows a trend that has been observed since the beginning of the 21st century, women prefer the democratic party.(@article1) This may be due to the history of the democratic party and its advocation for women-rights. It appears that the democratic party is the one that serves women best in terms of their economic interest. In fact the democratic party has paid a lot more attention to issues that directly pertain to women such as abortion and family leave than the republicans and there is evidence to suggest that this is a key part of its strategy. (@article2)
+We observe that females are 0.8 times as likely to vote for Trump as they are for Biden. This follows a trend that has been observed since the beginning of the 21st century, women prefer the democratic party.@article1 This may be due to the history of the democratic party and its advocation for women-rights. It appears that the democratic party is the one that serves women best in terms of their economic interest. In fact the democratic party has paid a lot more attention to issues that directly pertain to women such as abortion and family leave than the republicans and there is evidence to suggest that this is a key part of its strategy. @article2
 
 ## Highly Educated People
 
-One of the most apparent outcomes of this model would be the likelihood of highly educated people to prefer voting for Biden over Trump. One cause of this can be the fact that college graduates are far more likely to self-identify as liberal.(@article3) It could also pertain to the way in which most colleges are structured. It is possible that the values taught there are aligned with those of the democrats and hence shape the thinking of these highly educated people in a way that increases their likelihood of voting for a specific candidate. 
+One of the most apparent outcomes of this model would be the likelihood of highly educated people to prefer voting for Biden over Trump. One cause of this can be the fact that college graduates are far more likely to self-identify as liberal.@article3 It could also pertain to the way in which most colleges are structured. It is possible that the values taught there are aligned with those of the democrats and hence shape the thinking of these highly educated people in a way that increases their likelihood of voting for a specific candidate. 
 
-The proportion of graduates that make up the democratic voting pool has greatly increased over the last 20 years.(@article3)
+The proportion of graduates that make up the democratic voting pool has greatly increased over the last 20 years.@article3
 
 
 ## Political Strategy
-The most interesting part is how these observations apply to the political strategy of the two parties. Firstly, it was argued that the majority of females voting for the democrats were enough to sway the elections and therefore the main focus of the two parties, however this was disproven in 1980 and 1984 as the republican party won without fully closing the gender gap. They appealed to broad groups of women through issues that directly affected them and were not specific to women such as national security.(@article2)
+The most interesting part is how these observations apply to the political strategy of the two parties. Firstly, it was argued that the majority of females voting for the democrats were enough to sway the elections and therefore the main focus of the two parties, however this was disproven in 1980 and 1984 as the republican party won without fully closing the gender gap. They appealed to broad groups of women through issues that directly affected them and were not specific to women such as national security.@article2
 
 Additionally, with the increased amount of liberal, educated individuals arguing for various policies that inconvenience some working class individuals, it creates an opportunity for the republican party to increase its share of this demographic in an attempt to balance the disproportionality. An exaple of this may be the advocation for an environmentally friendly policy that negatively impacts the working class people in this field. (@article3)
 
