--- a/paper/references.bib
+++ b/paper/references.bib
@@ -66,3 +66,27 @@
   }  
   
   
+@article{gebru2021datasheets,
+  title={Datasheets for datasets},
+  author={Gebru, Timnit and Morgenstern, Jamie and Vecchione, Briana and Vaughan, Jennifer Wortman and Wallach, Hanna and Iii, Hal Daum{\'e} and Crawford, Kate},
+  journal={Communications of the ACM},
+  volume={64},
+  number={12},
+  pages={86--92},
+  year={2021},
+  publisher={ACM New York, NY, USA}
+}
+
+  
+  
+@data{dataset,
+author = {Schaffner, Brian and Ansolabehere, Stephen and Shih, Marissa},
+publisher = {Harvard Dataverse},
+title = {{Cooperative Election Study Common Content, 2022}},
+year = {2023},
+version = {V3},
+doi = {10.7910/DVN/PR4L8P},
+url = {https://doi.org/10.7910/DVN/PR4L8P}
+}
+  
+  
